crates/musli-tests/tests/ui/transparent_error.stderr
error: #[musli(transparent)] can only be used on types which have a single field
 --> tests/ui/transparent_error.rs:5:8
  |
5 | struct TransparentStruct {
  |        ^^^^^^^^^^^^^^^^^

error: #[musli(transparent)] can only be used on types which have a single field
  --> tests/ui/transparent_error.rs:12:8
   |
12 | struct TransparentTuple(u32, u32);
   |        ^^^^^^^^^^^^^^^^

error: #[musli(transparent)] types must have a single field
  --> tests/ui/transparent_error.rs:16:8
   |
16 | struct TransparentEmptyStruct;
   |        ^^^^^^^^^^^^^^^^^^^^^^

error: #[musli(transparent)] types must have a single field
  --> tests/ui/transparent_error.rs:20:8
   |
20 | struct TransparentEmptyTuple;
   |        ^^^^^^^^^^^^^^^^^^^^^

error: #[musli(transparent)] can only be used on types which have a single field
  --> tests/ui/transparent_error.rs:24:5
   |
24 | /     #[musli(transparent)]
25 | |     Variant {
26 | |         first: u32,
27 | |         second: u32,
28 | |     },
   | |_____^

error: #[musli(transparent)] can only be used on types which have a single field
  --> tests/ui/transparent_error.rs:29:5
   |
29 | /     #[musli(transparent)]
30 | |     TransparentTuple(u32, u32),
   | |______________________________^

error: #[musli(transparent)] types must have a single field
  --> tests/ui/transparent_error.rs:31:5
   |
31 | /     #[musli(transparent)]
32 | |     TransparentEmptyStruct,
   | |__________________________^

error: #[musli(transparent)] types must have a single field
  --> tests/ui/transparent_error.rs:33:5
   |
33 | /     #[musli(transparent)]
34 | |     TransparentEmptyTuple,
   | |_________________________^
